# KGFlow

./: .gitignore  CLAUDE.md  LICENSE  README.md  audit_report.md  audit_report_v2.md  kg-workflow-design.md  kgflow.toml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: analyst.md  architect.md  auditor.md  curator.md  developer.md  impact-analyst.md  kg-ops.md  kgflow-analyst.md  kgflow-architect.md  kgflow-auditor.md  kgflow-curator.md  kgflow-developer.md  kgflow-lead.md  lead-dev.md  lead.md  sub-dev.md  tech-lead.md
artifacts/schemas/: audit_report.schema.json  change_intent.schema.json  extractor_output.schema.json  impact_report.schema.json  kg_diff.schema.json  overrides.schema.json  plan_tasks.schema.json
docs/: extractor_architecture.md
extractors/: __init__.py  base.py  javascript_extractor.py  python_extractor.py
queries/: README.md
queries/go/: calls.scm  control_flow.scm  defs.scm  imports.scm
queries/javascript/: calls.scm  control_flow.scm  defs.scm  imports.scm
queries/python/: calls.scm  control_flow.scm  defs.scm  imports.scm
tests/: conftest.py
tests/unit/extractors/: test_base_extractor.py  test_python_extractor.py  test_registry.py
tests/unit/tools/: test_config.py  test_cypher_emitters.py  test_cypher_generator.py  test_diff_core.py  test_generate_helpers.py  test_validate_artifacts.py
tools/: ast_parser.py  config.py  cypher_generator.py  diff_kg.py  errors.py  generate_knowledge_graph.py  import_neo4j.py  mcp_server.py  neo4j_config.py  query_kg.py  validate_artifacts.py
