[project]
name = "automation-insight-kgflow"
version = "0.1.0"
description = "Knowledge Graph Assisted Development Workflow — CLI toolchain for Neo4j-based code analysis"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=6.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
]
